[gd_scene load_steps=10 format=2]

[ext_resource path="res://LogoPCEOMON.png" type="Texture" id=1]
[ext_resource path="res://Title/Buttons/Play.tscn" type="PackedScene" id=2]
[ext_resource path="res://Title/Buttons/Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://Font/VersionFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://FadeIn/FadeIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://Title/title_screen.gd" type="Script" id=6]
[ext_resource path="res://Background.png" type="Texture" id=7]

[sub_resource type="Theme" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Logo"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Menu/Logo:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30, 0.0 ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 640.0
margin_bottom = 480.0
rect_min_size = Vector2( 640, 480 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 22.3838
margin_top = 303.708
margin_right = 600.0
margin_bottom = 472.708
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_top = -22.5893
margin_right = 577.0
margin_bottom = 94.0
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 98.0
margin_right = 577.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Play" parent="Menu/CenterRow" instance=ExtResource( 2 )]
margin_left = 86.0
margin_right = 286.0
margin_bottom = 50.0

[node name="Options" parent="Menu/CenterRow" instance=ExtResource( 3 )]
margin_left = 290.0
margin_right = 490.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="Menu"]
margin_top = 152.0
margin_right = 577.0
margin_bottom = 169.0
custom_fonts/font = ExtResource( 4 )
text = "Version 0.0.2 - Solo disponible para desarrolladores. Snapshot de combate."
align = 1

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 480.0

[node name="Animations" type="AnimationPlayer" parent="."]
anims/Logo = SubResource( 2 )
[connection signal="pressed" from="Menu/CenterRow/Play" to="." method="_on_Play_pressed"]
[connection signal="fade_in_finished" from="FadeIn" to="." method="_on_FadeIn_fade_in_finished"]
[connection signal="fade_out_finished" from="FadeIn" to="." method="_on_FadeIn_fade_out_finished"]
